# Makefile.am for seq24

EXTRA_DIST = \
	bus.xpm \
	collapse.xpm \
	copy.xpm \
	down.xpm \
	expand.xpm \
	font_b.xpm \
	font_w.xpm \
	key.xpm \
	learn2.xpm \
	learn.xpm \
	length.xpm \
	loop.xpm \
	menu_empty.xpm \
	menu_full.xpm \
	midi.xpm \
	note_length.xpm \
	perfedit.xpm \
	play2.xpm \
	play.xpm \
	q_rec.xpm \
	quanize.xpm \
	rec.xpm \
	redo.xpm \
	scale.xpm \
	seq24_32.xpm \
	seq24.xpm \
	seq-editor.xpm \
	sequences.xpm \
	snap.xpm \
	song-editor.xpm \
	stop.xpm \
	thru.xpm \
	tools.xpm \
	undo.xpm \
	zoom.xpm
